# FinanceData

./: .gitignore  CLAUDE.md  README.md  TEST_REPORT.md  config.toml.example  dashboard.py  mcp_server.py  pyproject.toml  start-dashboard.sh  test_eastmoney.py
.claude/rules/: finance-coding.md  finance-tools.md
.claude/skills/: add-new-interface.md
.github/workflows/: ci.yml
docs/: interface-refactor-plan.md  provider-architecture-migration.md  provider-audit-report.md  provider-audit-task.md
docs/plans/: 2026-03-22-finance-data-design.md  2026-03-22-finance-data-implementation.md  2026-03-22-full-provider-integration-design.md  2026-03-22-full-provider-integration.md  2026-03-25-provider-audit-fix.md  2026-03-25-youzi-tools.md  2026-04-09-architecture-upgrade-delivery-validation.md  2026-04-09-phase1-toolspec-unification.md  new-interfaces-roadmap.md
docs/providers/: tencent-api.md  xueqiu-api.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
openspec/: config.yaml
openspec/templates/: acceptance.template.md  upstream-alignment.template.md
scripts/: download_all.py
src/finance_data/: __init__.py  __main__.py  client.py  config.py  verify.py
tests/: conftest.py  integration_test.py  provider_cross_comparison.py  test_client_board.py  test_client_naming.py  test_mcp_server.py  test_verify.py
tests/cli/: test_cli.py
tests/dashboard/: test_api.py  test_consistency.py  test_health_probes.py
tests/mcp/: test_mcp_default_dates.py  test_mcp_error_handling.py  test_tools_layout.py
(+421 files in other folders)
