[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-data"
version = "0.1.0"
description = "金融数据服务 - MCP + Python library"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.0.0",
    "tushare>=1.4.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
    "pandas>=2.0.0",
    "cachetools>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
browser = ["browser-cookie3>=0.11.0"]
dashboard = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/finance_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
